--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ ACCESS_TOKEN_EXPIRATION_TIME=900000
 ACCESS_TOKEN_SECRET='ACCESS_TOKEN_SECRET'
 REFRESH_TOKEN_EXPIRATION_TIME=2592000000
 REFRESH_TOKEN_SECRET='REFRESH_TOKEN_SECRET'
+COOKIE_SECRET='COOKIE_SECRET'
