--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+API_VERSION='1.0'
 POSTGRES_URL="postgres://default:g9SVquLTNP8b@ep-hidden-fire-40658649-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
 POSTGRES_USER="default"
 POSTGRES_HOST="ep-hidden-fire-40658649-pooler.ap-southeast-1.postgres.vercel-storage.com"
